--- a/style.css
+++ b/style.css
@@ -59,46 +59,21 @@ li {
     height: 50rem;
   }
 }
+@media screen and (max-device-width: 425px) {
+  .banner {
+    height: 75rem;
+  }
+}
 
 .content {
   padding: 13rem;
 }
-
-.content h1 {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-weight: 700;
-
-}
-
-@media screen and (max-width: 2560px) {
-  .content h1 {
-    font-size: 88px;
-  }
-}
-
-@media screen and (max-width: 2189px) {
-  .content h1 {
-    font-size: 78px;
-  }
-}
-
-@media screen and (max-width: 1440px) {
-  .content h1 {
-    font-size: 50px;
-  }
-}
-
 @media screen and (max-width: 2560px) {
   .content {
     padding: 18rem 29rem;
   }
 }
 
-@media screen and (max-width: 2189px) {
-  .content {
-    padding: 18rem 24rem;
-  }
-}
 
 @media screen and (max-width: 1880px) {
   .content {
@@ -114,15 +89,113 @@ li {
 
 @media screen and (max-width: 1440px) {
   .content {
-    padding: 13rem 16rem;
+    padding: 13rem 14rem;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .content {
+    padding: 13rem 3rem;
   }
 }
 
-@media screen and (max-width: 976px) {
+@media screen and (max-device-width: 768px) {
   .content {
-    padding: 14rem 7rem;
+    padding: 11rem 6rem;
   }
 }
+@media screen and (max-device-width: 425px) {
+  .content {
+    padding: 16rem 2rem;
+  }
+}
+
+
+.content h1 {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 700;
+
+}
+
+@media screen and (max-width: 2560px) {
+  .content h1 {
+    font-size: 110px;
+  }
+}
+@media screen and (max-device-width: 1440px) {
+  .content h1 {
+    font-size: 60px;
+  }
+}
+@media screen and (max-device-width: 768px) {
+  .content h1 {
+    font-size: 53px;
+  }
+}
+@media screen and (max-device-width: 425px) {
+  .content h1{
+    font-size: 66px;
+  }
+}
+
+
+
+@media screen and (max-device-width: 2560px) {
+  .logo{
+    padding-left: 10.6rem;
+  }
+}
+@media screen and (max-device-width: 1440px) {
+  .logo{
+    padding-left: 5.6rem;
+  }
+}
+@media screen and (max-device-width: 768px) {
+  .logo{
+    padding-left: 3.2rem;
+  }
+}
+@media screen and (max-device-width: 425px) {
+  .logo{
+    padding-left: 6rem;
+  }
+}
+
+.content a{
+  color: #000;
+}
+.content i:hover{
+  color: #606060;
+}
+@media screen and (max-device-width: 2560px) {
+  .content i{
+    font-size: 5.2rem;
+    padding-left: 17px;
+  }
+}
+
+@media screen and (max-device-width: 1440px) {
+  .content i{
+    font-size: 3.2rem;
+    padding-left: 13px;
+  }
+}
+
+@media screen and (max-device-width: 768px) {
+  .content i{
+    font-size: 3.2rem;
+    padding-left: 13px;
+  }
+}
+
+@media screen and (max-device-width: 425px) {
+  .content i{
+    font-size: 3.5rem;
+    padding-left: 13px;
+  }
+}
+
+
+
 
 .row {
   display: -ms-flexbox;
@@ -177,9 +250,23 @@ li {
     display: unset;
   }
 }
-
+@media screen and (max-width: 2560px) {
+  .mob-img{
+    display: none;
+  }
+}
+@media screen and (max-device-width: 425px) {
+  .mob-img{
+    display: unset;
+  }
+}
 @media screen and (max-width: 990px) {
   #high-res{
+    display: none;
+  }
+}
+@media screen and (max-device-width: 425px) {
+  #med-res{
     display: none;
   }
 }
@@ -237,6 +324,12 @@ body {
   .footer {
     font-size: 16px;
     height: 60px;
+  }
+}
+@media screen and (max-device-width: 425px) {
+  .footer {
+    font-size: 22px;
+    height: 90px;
   }
 }
 
