--- a/style.css
+++ b/style.css
@@ -3,42 +3,6 @@
   padding: 0;
 }
 
-.navbar {
-  width: 100%;
-  display: flex;
-  height: 60px;
-  align-items: center;
-  background-color: rgba(0, 0, 0, 0);
-  justify-content: space-between;
-}
-
-.brand {
-  padding-left: 2rem;
-  color: red;
-}
-
-.brand h3 {
-  font-size: 30px;
-}
-
-.right {
-  padding-right: 2rem;
-  font-size: 20px;
-}
-
-ul {
-  display: flex;
-}
-
-li {
-  list-style: none;
-  padding-right: 2rem;
-}
-
-.navbar a {
-  text-decoration: none;
-  color: #fff;
-}
 
 .banner {
   background-image: url(./images/weeknd.jpg);
@@ -66,147 +30,13 @@ li {
   }
 }
 
-.content {
-  padding: 13rem;
-}
+
 
 @media screen and (max-width: 2560px) {
   .content {
     padding: 18rem 29rem;
   }
 }
-
-
-@media screen and (max-width: 1880px) {
-  .content {
-    padding: 19rem 14rem;
-  }
-}
-
-@media screen and (max-width: 1154px) {
-  .content {
-    padding: 14rem 7rem;
-  }
-}
-
-@media screen and (max-width: 1440px) {
-  .content {
-    padding: 13rem 14rem;
-  }
-}
-
-@media screen and (max-width: 1024px) {
-  .content {
-    padding: 13rem 3rem;
-  }
-}
-
-@media screen and (max-device-width: 768px) {
-  .content {
-    padding: 11rem 6rem;
-  }
-}
-
-@media screen and (max-device-width: 425px) {
-  .content {
-    padding: 22rem 2rem;
-    margin-bottom: 17rem;
-  }
-}
-
-
-.content h1 {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-weight: 700;
-
-}
-
-@media screen and (max-width: 2560px) {
-  .content h1 {
-    font-size: 110px;
-  }
-}
-
-@media screen and (max-device-width: 1440px) {
-  .content h1 {
-    font-size: 60px;
-  }
-}
-
-@media screen and (max-device-width: 768px) {
-  .content h1 {
-    font-size: 53px;
-  }
-}
-
-@media screen and (max-device-width: 425px) {
-  .content h1 {
-    font-size: 66px;
-  }
-}
-
-
-
-@media screen and (max-device-width: 2560px) {
-  .logo {
-    padding-left: 10.6rem;
-  }
-}
-
-@media screen and (max-device-width: 1440px) {
-  .logo {
-    padding-left: 5.6rem;
-  }
-}
-
-@media screen and (max-device-width: 768px) {
-  .logo {
-    padding-left: 3.2rem;
-  }
-}
-
-@media screen and (max-device-width: 425px) {
-  .logo {
-    padding-left: 6rem;
-  }
-}
-
-.content a {
-  color: #000;
-}
-
-.content i:hover {
-  color: #606060;
-}
-
-@media screen and (max-device-width: 2560px) {
-  .content i {
-    font-size: 5.2rem;
-    padding-left: 17px;
-  }
-}
-
-@media screen and (max-device-width: 1440px) {
-  .content i {
-    font-size: 3.2rem;
-    padding-left: 13px;
-  }
-}
-
-@media screen and (max-device-width: 768px) {
-  .content i {
-    font-size: 4rem;
-    padding-left: 13px;
-  }
-}
-
-@media screen and (max-device-width: 425px) {
-  .content i {
-    font-size: 4rem;
-    padding-left: 13px;
-  }
-}
-
 
 
 
@@ -327,38 +157,52 @@ body {
 }
 
 .footer {
-  background-color: #000;
-  height: 60px;
+  height: auto;
   color: white;
+
+}
+.social-media{
+  height: 300px;
+  background-color: #000;
+  display: grid;
+  align-content: center;
+  justify-items: center;
+}
+.footer-title{
+  color: red;
+  font-size: 50px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.media{
+  margin-top: 1rem;
+  font-size: 2.8rem;
+}
+.copyrights{
+  height: 85px;
+  background-color: #0c0c0c;
+  color: white;
+  font-size: 29px;
   display: flex;
   align-items: center;
   justify-content: center;
   font-family: monospace;
 }
-
 @media screen and (max-width: 2560px) {
-  .footer {
-    font-size: 25px;
-    height: 80px;
-  }
+
 }
 
 @media screen and (max-width: 1440px) {
-  .footer {
-    font-size: 16px;
-    height: 60px;
-  }
+ 
 }
 
 @media screen and (max-device-width: 425px) {
-  .footer {
-    font-size: 26px;
-    height: 90px;
-  }
+  
 }
-
-.footer a {
-  text-decoration: none;
+.media a{
+  color: #fff;
+  margin-right: 1rem;
+}
+.copyrights a{
   color: #fff;
 }
 
@@ -373,7 +217,7 @@ body {
   opacity: 0.9;
   height: 22.2rem;
   display: flex;
-
+  margin-top: -22rem;
 }
 
 .music-player .image {
