--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 
 @media screen and (max-width: 2560px) {
   .banner {
-    height: 76rem;
+    height: 86rem;
   }
 }
 
@@ -161,48 +161,169 @@ body {
   color: white;
 
 }
-.social-media{
-  height: 300px;
-  background-color: #000;
-  display: grid;
-  align-content: center;
-  justify-items: center;
-}
-.footer-title{
-  color: red;
-  font-size: 50px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-.media{
-  margin-top: 1rem;
-  font-size: 2.8rem;
-}
-.copyrights{
-  height: 85px;
-  background-color: #0c0c0c;
-  color: white;
-  font-size: 29px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-family: monospace;
-}
-@media screen and (max-width: 2560px) {
 
+
+@media screen and (max-device-width: 2560px) {
+  .social-media {
+    height: 250px;
+    background-color: #000;
+    display: grid;
+    align-content: center;
+    justify-items: center;
+  }
 }
 
-@media screen and (max-width: 1440px) {
- 
+@media screen and (max-device-width: 1440px) {
+  .social-media {
+    height: 210px;
+    background-color: #000;
+    display: grid;
+    align-content: center;
+    justify-items: center;
+  }
+}
+
+@media screen and (max-device-width: 768px) {
+  .social-media {
+    height: 210px;
+    background-color: #000;
+    display: grid;
+    align-content: center;
+    justify-items: center;
+  }
 }
 
 @media screen and (max-device-width: 425px) {
-  
+  .social-media {
+    height: 300px;
+    background-color: #000;
+    display: grid;
+    align-content: center;
+    justify-items: center;
+  }
 }
-.media a{
+
+@media screen and (max-device-width: 2560px) {
+  .footer-title {
+    font-size: 60px;
+    color: red;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+}
+
+@media screen and (max-device-width: 1440px) {
+  .footer-title {
+    font-size: 35px;
+    color: red;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+}
+
+@media screen and (max-device-width: 768px) {
+  .footer-title {
+    font-size: 40px;
+    color: red;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+}
+
+@media screen and (max-device-width: 425px) {
+  .footer-title {
+    color: red;
+    font-size: 50px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+}
+
+@media screen and (max-device-width: 2560px) {
+  .media {
+    margin-top: 1rem;
+    font-size: 3.2rem;
+  }
+}
+
+@media screen and (max-device-width: 1440px) {
+  .media {
+    margin-top: 1rem;
+    font-size: 2.1rem;
+  }
+}
+
+@media screen and (max-device-width: 768px) {
+  .media {
+    margin-top: 1rem;
+    font-size: 2.3rem;
+  }
+}
+
+@media screen and (max-device-width: 425px) {
+  .media {
+    margin-top: 1rem;
+    font-size: 2.8rem;
+  }
+}
+
+
+@media screen and (max-device-width: 2560px) {
+  .copyrights {
+    height: 85px;
+    background-color: #0c0c0c;
+    color: white;
+    font-size: 28px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: monospace;
+  }
+}
+
+@media screen and (max-device-width: 1440px) {
+  .copyrights {
+    height: 85px;
+    background-color: #0c0c0c;
+    color: white;
+    font-size: 19px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: monospace;
+  }
+}
+
+@media screen and (max-device-width: 768px) {
+  .copyrights {
+    height: 85px;
+    background-color: #0c0c0c;
+    color: white;
+    font-size: 22px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: monospace;
+  }
+}
+
+@media screen and (max-device-width: 425px) {
+  .copyrights {
+    height: 85px;
+    background-color: #0c0c0c;
+    color: white;
+    font-size: 29px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: monospace;
+  }
+}
+
+
+
+.media a {
   color: #fff;
   margin-right: 1rem;
 }
-.copyrights a{
+
+.copyrights a {
   color: #fff;
 }
 
@@ -211,160 +332,339 @@ body {
   color: #fff;
 }
 
-.music-player {
-  width: 100%;
-  background: black;
-  opacity: 0.9;
-  height: 22.2rem;
-  display: flex;
-  margin-top: -22rem;
+
+@media screen and (max-device-width: 2560px) {
+  .music-player {
+    width: 100%;
+    background: black;
+    opacity: 0.9;
+    height: 23.2rem;
+    display: flex;
+    margin-top: -22rem;
+    justify-content: center;
+  }
 }
 
-.music-player .image {
-  padding: 44px;
+@media screen and (max-device-width: 1440px) {
+  .music-player {
+    width: 100%;
+    background: black;
+    opacity: 0.9;
+    height: 15.2rem;
+    display: flex;
+    margin-top: -15rem;
+    justify-content: center;
+  }
+}
+
+@media screen and (max-device-width: 1024px) {
+  .music-player {
+    width: 100%;
+    background: black;
+    opacity: 0.9;
+    height: 15.2rem;
+    display: flex;
+    margin-top: -15rem;
+    justify-content: space-evenly;
+  }
+}
+
+@media screen and (max-device-width: 425px) {
+  .music-player {
+    width: 100%;
+    background: black;
+    opacity: 0.9;
+    height: 22.2rem;
+    display: flex;
+    margin-top: -22rem;
+  }
+}
+
+
+@media screen and (max-device-width: 2560px) {
+  .music-player .image img {
+    width: 19rem;
+    border-radius: 57px;
+    padding: 27px;
+    margin-left: 0rem;
+  }
+}
+
+@media screen and (max-device-width: 1440px) {
+  .music-player .image img {
+    width: 13rem;
+    border-radius: 57px;
+    padding: 24px;
+    margin-left: 0rem;
+  }
+}
+
+@media screen and (max-device-width: 425px) {
+  .music-player .image img {
+    width: 16rem;
+    border-radius: 85px;
+    padding: 44px;
     margin-left: 3rem;
-
-}
-
-.music-player .image img {
-  width: 16rem;
-  border-radius: 36px;
-}
-
-.track {
-  padding: 44px 0px;
-  width: 35rem;
-}
-.track .title {
-  font-family: 'Poppins', sans-serif;
-  font-size: 60px;
-  color: azure;
-}
-
-.slider_container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.seek_slider,
-.volume_slider {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  height: 13px;
-    background: #8500ff;
-  -webkit-transition: .2s;
-  transition: opacity .2s;
-  transition: 0.4s all ease-out;
-}
-
-.seek_slider::-webkit-slider-thumb,
-.volume_slider::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  width: 18px;
-  height: 18px;
-  background: white;
-  border: 3px solid #3774ff;
-  cursor: pointer;
-  border-radius: 100%;
-}
-
-.seek_slider:hover,
-.volume_slider:hover {
-  opacity: 1.0;
-}
-
-.seek_slider {
-  width: 71%;
-}
-
-.volume_slider {
-  width: 30%;
-}
-
-.current-time,
-.total-duration {
-  padding: 10px;
-  color: azure;
-  font-size: 27px
-}
-
-i.fa-volume-down,
-i.fa-volume-up {
-  padding: 10px;
-  padding: 10px;
-  color: azure;
-  font-size: 35px;
-}
-
-
-
-.buttons {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  margin-bottom: 30px;
-  color: azure;
-  font-size: 1.3rem;
-  justify-content: center;
-}
-
-i,
-i.fa-play-circle,
-i.fa-pause-circle,
-i.fa-step-forward,
-i.fa-step-backward {
-  cursor: pointer;
-}
-
-.randomActive {
-  color: black;
-}
-
-.rotate {
-  animation: rotation 8s infinite linear;
-}
-
-@keyframes rotation {
-  from {
-    transform: rotate(0deg);
   }
 
-  to {
-    transform: rotate(359deg);
+}
+
+
+@media screen and (max-device-width: 2560px) {
+  .track {
+    padding: 10px 0px;
+    width: 50rem;
   }
 }
 
-.loader {
-  height: 70px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.loader .stroke {
-  background: #f1f1f1;
-  height: 150%;
-  width: 10px;
-  border-radius: 50px;
-  margin: 0px 5px;
-  animation: animate 1.4s linear infinite;
-}
-
-@keyframes animate {
-  50% {
-    height: 20%;
-    background: #4286f4;
-  }
-
-  100% {
-    height: 100%;
+@media screen and (max-device-width: 1440px) {
+  .track {
+    padding: 10px 0px;
+    width: 35rem;
   }
 }
 
-.prev-track, .next-track, .playpause-track {
-  margin-right: 2rem;
+@media screen and (max-device-width: 425px) {
+  .track {
+    padding: 44px 0px;
+    width: 35rem;
+  }
 }
+
+
+@media screen and (max-device-width: 2560px) {
+  .track .title {
+    font-family: 'Poppins', sans-serif;
+    font-size: 90px;
+    color: azure;
+  }
+}
+  @media screen and (max-device-width: 1440px) {
+    .track .title {
+      font-family: 'Poppins', sans-serif;
+      font-size: 53px;
+      color: azure;
+    }
+  }
+
+  @media screen and (max-device-width: 425px) {
+    .track .title {
+      font-family: 'Poppins', sans-serif;
+      font-size: 60px;
+      color: azure;
+    }
+
+  }
+
+  @media screen and (max-device-width: 2560px) {
+    .slider_container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: -0.8rem;
+    }
+  }
+
+  @media screen and (max-device-width: 1440px) {
+    .slider_container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: -0.8rem;
+    }
+  }
+
+  @media screen and (max-device-width: 425px) {
+    .slider_container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: -0.8rem;
+    }
+  }
+
+
+  @media screen and (max-device-width: 2560px) {
+
+    .seek_slider,
+    .volume_slider {
+      height: 10px;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
+      height: 13px;
+      background: #8500ff;
+      -webkit-transition: .2s;
+      transition: opacity .2s;
+      transition: 0.4s all ease-out;
+    }
+  }
+
+  @media screen and (max-device-width: 1440px) {
+
+    .seek_slider,
+    .volume_slider {
+      height: 10px;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
+      height: 10px;
+      background: #8500ff;
+      -webkit-transition: .2s;
+      transition: opacity .2s;
+      transition: 0.4s all ease-out;
+    }
+  }
+
+  @media screen and (max-device-width: 425px) {
+
+    .seek_slider,
+    .volume_slider {
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
+      height: 13px;
+      background: #8500ff;
+      -webkit-transition: .2s;
+      transition: opacity .2s;
+      transition: 0.4s all ease-out;
+    }
+  }
+
+  .seek_slider::-webkit-slider-thumb,
+  .volume_slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    width: 18px;
+    height: 18px;
+    background: white;
+    border: 3px solid #3774ff;
+    transition: 0.4s all ease-out;
+    cursor: pointer;
+    border-radius: 100%;
+  }
+
+  .seek_slider:hover,
+  .volume_slider:hover {
+    opacity: 1.0;
+  }
+
+  .seek_slider {
+    width: 71%;
+  }
+
+  .volume_slider {
+    width: 30%;
+  }
+
+  .current-time,
+  .total-duration {
+    padding: 10px;
+    color: azure;
+    font-size: 27px
+  }
+
+  i.fa-volume-down,
+  i.fa-volume-up {
+    padding: 10px;
+    padding: 10px;
+    color: azure;
+    font-size: 35px;
+  }
+
+  @media screen and (max-device-width: 2560px) {
+    .buttons {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      margin-bottom: 30px;
+      color: azure;
+      font-size: 1.5rem;
+      justify-content: center;
+    }
+  }
+
+  @media screen and (max-device-width: 1440px) {
+    .buttons {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      margin-bottom: 30px;
+      margin-top: -14px;
+      color: azure;
+      font-size: 1rem;
+      justify-content: center;
+    }
+  }
+
+  @media screen and (max-device-width: 425px) {
+    .buttons {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      margin-bottom: 30px;
+      color: azure;
+      font-size: 1.3rem;
+      justify-content: center;
+    }
+  }
+
+  i,
+  i.fa-play-circle,
+  i.fa-pause-circle,
+  i.fa-step-forward,
+  i.fa-step-backward {
+    cursor: pointer;
+  }
+
+  .randomActive {
+    color: black;
+  }
+
+  .rotate {
+    animation: rotation 8s infinite linear;
+  }
+
+  @keyframes rotation {
+    from {
+      transform: rotate(0deg);
+    }
+
+    to {
+      transform: rotate(359deg);
+    }
+  }
+
+  .loader {
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .loader .stroke {
+    background: #f1f1f1;
+    height: 150%;
+    width: 10px;
+    border-radius: 50px;
+    margin: 0px 5px;
+    animation: animate 1.4s linear infinite;
+  }
+
+  @keyframes animate {
+    50% {
+      height: 20%;
+      background: #4286f4;
+    }
+
+    100% {
+      height: 100%;
+    }
+  }
+
+  .prev-track,
+  .next-track,
+  .playpause-track {
+    margin-right: 2rem;
+  }
