--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 
 @media screen and (max-width: 2560px) {
   .banner {
-    height: 86rem;
+    height: 58rem;
   }
 }
 
@@ -205,7 +205,7 @@ body {
 
 @media screen and (max-device-width: 2560px) {
   .footer-title {
-    font-size: 60px;
+    font-size: 29px;
     color: red;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
@@ -238,7 +238,7 @@ body {
 @media screen and (max-device-width: 2560px) {
   .media {
     margin-top: 1rem;
-    font-size: 3.2rem;
+    font-size: 2rem;
   }
 }
 
@@ -269,7 +269,7 @@ body {
     height: 85px;
     background-color: #0c0c0c;
     color: white;
-    font-size: 28px;
+    font-size: 15px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -338,9 +338,9 @@ body {
     width: 100%;
     background: black;
     opacity: 0.9;
-    height: 23.2rem;
+    height: 17.2rem;
     display: flex;
-    margin-top: -22rem;
+    margin-top: -17rem;
     justify-content: center;
   }
 }
@@ -383,7 +383,7 @@ body {
 
 @media screen and (max-device-width: 2560px) {
   .music-player .image img {
-    width: 19rem;
+    width: 13rem;
     border-radius: 57px;
     padding: 27px;
     margin-left: 0rem;
@@ -435,7 +435,7 @@ body {
 @media screen and (max-device-width: 2560px) {
   .track .title {
     font-family: 'Poppins', sans-serif;
-    font-size: 90px;
+    font-size: 56px;
     color: azure;
   }
 }
@@ -612,9 +612,13 @@ body {
 
   i,
   i.fa-play-circle,
-  i.fa-pause-circle,
+  i.fa-pause-circle{
+    font-size: 4rem;
+    cursor: pointer;
+  }
   i.fa-step-forward,
   i.fa-step-backward {
+    font-size: 2rem;
     cursor: pointer;
   }
 
